Fixing the timeline being too long

--- a/static/sass/home.scss
+++ b/static/sass/home.scss
@@ -837,7 +837,7 @@ u {
       position: absolute;
       top: 0;
       left: 49.96%;
-      height: 100%;
+      height: 98%;
       width: 1px;
       background: #d7e4ed;
     }
